--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -3,52 +3,152 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
-        <scene sceneID="un2-xi-L1r">
-            <objects>
-                <tableViewController id="HZ2-bc-VYT" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tx1-GB-6Wx">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="U3t-5g-ZIv">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U3t-5g-ZIv" id="Rjk-gK-Ebe">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="HZ2-bc-VYT" id="R17-7e-AS4"/>
-                            <outlet property="delegate" destination="HZ2-bc-VYT" id="m5m-k6-9Ip"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="LRD-eF-x2M"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ToR-Ob-cJ3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="717" y="404"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="iMU-ix-WrI">
             <objects>
                 <navigationController id="XgD-dd-ezr" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B6n-XY-jdU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="B6n-XY-jdU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="HZ2-bc-VYT" kind="relationship" relationship="rootViewController" id="fZh-xL-EdO"/>
+                        <segue destination="pEn-zz-RkY" kind="relationship" relationship="rootViewController" id="3EP-dq-kFW"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N4w-rl-Mzm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-103" y="404"/>
+        </scene>
+        <!--School Menu View Controller-->
+        <scene sceneID="bqG-HB-Xtz">
+            <objects>
+                <viewController storyboardIdentifier="ZXSchoolMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pEn-zz-RkY" customClass="ZXSchoolMenuViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Kl3-xN-85X"/>
+                        <viewControllerLayoutGuide type="bottom" id="CCx-Pe-hbB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MQN-40-dDG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vgX-ZP-GPR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ZXMenuCell1" rowHeight="88" id="n0f-we-t0I" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n0f-we-t0I" id="hch-JV-mgq">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UVr-fi-RVE">
+                                                    <rect key="frame" x="15" y="8" width="74" height="74"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="74" id="ny5-NN-zAe"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAH-V5-P3V">
+                                                    <rect key="frame" x="97" y="34" width="462" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="U77-gV-58C"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UVr-fi-RVE" firstAttribute="top" secondItem="hch-JV-mgq" secondAttribute="topMargin" id="7ai-0p-Lbh"/>
+                                                <constraint firstItem="UVr-fi-RVE" firstAttribute="leading" secondItem="hch-JV-mgq" secondAttribute="leadingMargin" constant="7" id="O35-OY-Ti1"/>
+                                                <constraint firstItem="MAH-V5-P3V" firstAttribute="leading" secondItem="UVr-fi-RVE" secondAttribute="trailing" constant="8" symbolic="YES" id="OaO-S4-UGn"/>
+                                                <constraint firstItem="MAH-V5-P3V" firstAttribute="trailing" secondItem="hch-JV-mgq" secondAttribute="trailingMargin" id="keG-5b-WbI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="UVr-fi-RVE" secondAttribute="bottom" constant="-3" id="y9B-v3-d5w"/>
+                                                <constraint firstItem="MAH-V5-P3V" firstAttribute="top" secondItem="hch-JV-mgq" secondAttribute="topMargin" constant="26" id="ynQ-YG-Kxl"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ZXMenuCell2" id="wfY-1C-Ch3" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wfY-1C-Ch3" id="qsH-T0-8Vn">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iJF-XJ-97a">
+                                                    <rect key="frame" x="15" y="8" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="zpE-p3-JaU"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VCd-aA-4wn">
+                                                    <rect key="frame" x="134" y="11" width="284" height="22"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每日餐饮" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDD-8a-WpX">
+                                                    <rect key="frame" x="53" y="13" width="78" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="78" id="ohk-C3-o4o"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="new" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p97-Bz-gee">
+                                                    <rect key="frame" x="139" y="13" width="42" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="42" id="oc8-bF-tSy"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="p97-Bz-gee" firstAttribute="baseline" secondItem="cDD-8a-WpX" secondAttribute="baseline" id="0AM-93-l7p"/>
+                                                <constraint firstItem="iJF-XJ-97a" firstAttribute="leading" secondItem="qsH-T0-8Vn" secondAttribute="leadingMargin" constant="7" id="95m-0f-bP4"/>
+                                                <constraint firstItem="p97-Bz-gee" firstAttribute="leading" secondItem="cDD-8a-WpX" secondAttribute="trailing" constant="8" symbolic="YES" id="Iu5-xY-fTP"/>
+                                                <constraint firstItem="p97-Bz-gee" firstAttribute="centerY" secondItem="iJF-XJ-97a" secondAttribute="centerY" id="V6N-xe-jP9"/>
+                                                <constraint firstItem="cDD-8a-WpX" firstAttribute="leading" secondItem="iJF-XJ-97a" secondAttribute="trailing" constant="8" symbolic="YES" id="iYQ-91-Ijx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="iJF-XJ-97a" secondAttribute="bottom" constant="-3" id="q0y-k0-N0k"/>
+                                                <constraint firstItem="iJF-XJ-97a" firstAttribute="top" secondItem="qsH-T0-8Vn" secondAttribute="topMargin" id="rlD-Rz-B4Y"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="VCd-aA-4wn"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pEn-zz-RkY" id="5PB-K1-yCv"/>
+                                    <outlet property="delegate" destination="pEn-zz-RkY" id="7S6-PD-5Mj"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="vgX-ZP-GPR" secondAttribute="trailing" constant="-16" id="95k-nF-VSB"/>
+                            <constraint firstItem="CCx-Pe-hbB" firstAttribute="top" secondItem="vgX-ZP-GPR" secondAttribute="bottom" id="Qvk-TV-3Ws"/>
+                            <constraint firstItem="vgX-ZP-GPR" firstAttribute="leading" secondItem="MQN-40-dDG" secondAttribute="leadingMargin" constant="-16" id="Xbf-OP-AWk"/>
+                            <constraint firstItem="vgX-ZP-GPR" firstAttribute="top" secondItem="Kl3-xN-85X" secondAttribute="bottom" id="fVT-US-utx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="MNZ-nP-XnC"/>
+                    <connections>
+                        <outlet property="tableView" destination="vgX-ZP-GPR" id="wB2-zs-Gj3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5QN-9g-1Di" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="521" y="401"/>
         </scene>
     </scenes>
 </document>
