--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -15,6 +15,9 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="pEn-zz-RkY" kind="relationship" relationship="rootViewController" id="3EP-dq-kFW"/>
@@ -24,7 +27,7 @@
             </objects>
             <point key="canvasLocation" x="-103" y="404"/>
         </scene>
-        <!--School Menu View Controller-->
+        <!--校园-->
         <scene sceneID="bqG-HB-Xtz">
             <objects>
                 <viewController storyboardIdentifier="ZXSchoolMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pEn-zz-RkY" customClass="ZXSchoolMenuViewController" sceneMemberID="viewController">
@@ -150,7 +153,7 @@
                             <constraint firstItem="vgX-ZP-GPR" firstAttribute="top" secondItem="Kl3-xN-85X" secondAttribute="bottom" id="fVT-US-utx"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="MNZ-nP-XnC"/>
+                    <navigationItem key="navigationItem" title="校园" id="MNZ-nP-XnC"/>
                     <connections>
                         <outlet property="tableView" destination="vgX-ZP-GPR" id="wB2-zs-Gj3"/>
                     </connections>
